connection.js and server.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,14 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scwdev/tunr-lab-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scwdev/tunr-lab-backend/issues"
+  },
+  "homepage": "https://github.com/scwdev/tunr-lab-backend#readme",
+  "description": ""
 }
